=== vNext ===
* Set of components now uses an extra db column. You can set the name of this using ConfigurationKey.EmbeddableSetOrdinalFieldName
* Added removed to IEnversProxyFactory.CreateToOneProxy



=== 1.6 GA (v 1.6.0), 2013-03-14, NH 3.3.3 CR1 ===

*** Possible breaking change ***
* IAuditStrategy.Initialize(AuditConfiguration) added. AuditConfiguration and GlobalConfiguration removed from interface methods.
* All factory methods on ICollectionMapperFactory has one extra parameter - embeddableElementType saying if it's a collection of components or not
* ...and the same goes for ICustomCollectionMapperFactory

** Bug
* [NHE-104] - IdBag + WithModifiedFlag throws when inserting
* [NHE-105] - Detached ManyToMany + WithModifiedFlag throws
* [NHE-107] - Insert child + update parent misses changed prop for modified flag
* [NHE-109] - Projections on AuditEntity.Property("id") throws

** Improvement
* [NHE-38] - Support for collection of Components in envers 
* [NHE-101] - Add IPostInstantiationListener
* [NHE-102] - Introducing AuditFactoryAttribute



=== 1.5 GA (v 1.5.0), 2012-12-05, NH 3.3.2 GA ====

*** Possible breaking change ***
* ICollectionMapperFactory.IdBag and IdBag<T> signature changed. IndexComponentData no longer passed.

** Bug
* [NHE-95] - unionsubclass mapping creates table for abstract base class
* [NHE-98] - Between in OR statement produce wrong result
* [NHE-99] - Maximize in OR statement produce wrong result
* [NHE-93] - Rolled back transaction might create audit data
* [NHE-94] - Support composite-id with key-many-to-one
* [NHE-97] - Exception if non lazy ToOne ref exists

** Improvement
* [NHE-96] - IdBag is not currently supported
* [NHE-100] - Get the latest revision of all instances for a requested Entity Class



=== 1.4 GA (v 1.4.0.0), 2012-10-05, NH 3.3.1 GA ===

** Bug
* [NHE-60] - Support bidirectional onetomany with join table
* [NHE-86] - Bidirectional one-to-many with composite-id throws
* [NHE-88] - Support custom generic types