@@ -65,7 +65,7 @@ namespace NHibernate.Envers.Query.Impl
 			// --> based on auditStrategy (see above)
 			VerCfg.GlobalCfg.AuditStrategy.AddEntityAtRevisionRestriction(QueryBuilder, QueryBuilder.RootParameters, revisionPropertyPath,
 					verEntCfg.RevisionEndFieldName, true, referencedIdData,
-					revisionPropertyPath, originalIdPropertyName, QueryConstants.ReferencedEntityAlias, QueryConstants.ReferencedEntityAliasDefAudStr, true);
+					revisionPropertyPath, originalIdPropertyName, QueryConstants.ReferencedEntityAlias, QueryConstants.ReferencedEntityAliasDefAudStr);
 
 			// e.revision_type != DEL
 			if (!_includeDeletions)
