@@ -1,6 +1,7 @@
 === vNext ===
 * Set of components now uses an extra db column. You can set the name of this using ConfigurationKey.EmbeddableSetOrdinalFieldName
 * Added removed to IEnversProxyFactory.CreateToOneProxy
+* Removed inclusive parameter from IAuditStrategy.AddEntityAtRevisionRestriction(...)
 
 
 
